# alice-substructure

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
comparison/PbPb/: one_off_comparison.py
comparison/awkward1Skim/: one_off_comparison.py
comparison/crossCheckTask/: one_off_comparison.py
comparison/embedPythia/: one_off_comparison.py
comparison/hybridMatchingCriteria/: one_off_comparison.py
comparison/localEmbedPythia/: one_off_comparison.py
comparison/ppMC/: one_off_comparison.py
comparison/trackSkim/: one_off_comparison.py
config/: datasets.yaml  new_config.yaml  track_skim_config.yaml
dynamicalGrooming/: config.yaml  runDynamicalGrooming.C  run_dynamical_grooming.py
dynamicalGrooming/embedding/: embedding_file_list.txt
dynamicalGrooming/laurasScripts/: runJetSubstructure.C  runJetSubstructure.sh
exploration_scripts/: .gitignore  JESForEmcalPerformance.cc  SplitLHC15o.C  compare_atlas_spectra.py  contrived_root_tree.cxx  direct_arrow.py  hardest_kt_root_colors.cc  kt_prong_matching_sketch.py  nested_jagged_arrays.py  plot_jetscape_RAA.py  power_law_weighting.py  projection_cross_check.C  rename_existing_unfolding_files.py  reproduce.py  testSubstructureTree.cc  testWritingObjectToTree.C  test_array_interpretation.py  test_awkward_group_by.py  test_awkward_in_array.py  test_data_manager.py  test_inverse_transform_sampling.py  test_logging_for_c_lib.py  test_logging_for_c_lib_standalone_test.py  test_recursive_splitting.py  test_struct_defaults.cxx  test_tree_branch_status.C
exploration_scripts/embeddingTests/: wn.xml
exploration_scripts/embedding_memory_leak/: README.md  lego_train.C
hardProbes2020/: plots.py
jet_substructure/analysis/: analysis_methods.py  analyze_tree.py  data_frame.py  draw_splitting.py  fit_paper.py  full_results_helpers.py  model_calculations.py  new_plot_comparison.py  new_skim_to_flat_tree.py  parsl.py  plot_base.py  plot_from_RDF_skim.py  plot_from_skim.py  plot_paper.py  plot_results.py  plot_style.py  plot_unfolded_results.py  plot_unfolding.py  plot_unfolding_1D.py  run_mammoth_analysis.py  skim_to_flat_tree.py  substructure.py  track_skim_adapter.py  unfolding_analysis.py  unfolding_base.py  unweighted_spectra.py
jet_substructure/base/: analysis_objects.py  data_manager.py  download_file_list.py  download_train_with_config.py  helpers.py  new_methods.py  notebook_utils.py  skim_analysis_objects.py  substructure_methods.py  unfolding.py
jet_substructure/cpp/: RooSimpleJetPt.cxx  RooSimpleKgppzcut4.cxx  RooSimplePbPb.cxx  RooSimplePbPbClosure.cxx  RooSimpleRgpp.cxx  convert_herwig_to_model_dependence.py  convert_pp_result_to_new_format.py  create_scale_factor_tree.py  data_frame.py  embeddingFallBack.cc  export_data.py  extract_scale_factors.py  plotfinalUncertPanels.C  scale_factors.py  skim_cross_check_task.py  unfolding.cxx  unfolding_2D.py  utils.py
jet_substructure/cpp/for_comparison/: plotfinalUncertPanels.C
jet_substructure/cpp/leticia/: .gitignore  plotchooseiter60_var.C
jet_substructure/cpp/unfolding/: RooSimpleKgpp.cxx  RooSimpleKgppzcut4.cxx  RooSimpleRgPbPbRmax025ClosureWeight1_var.cxx  RooSimpleRgPbPbRmax025ClosureWeight2_var.cxx  RooSimpleRgpp.cxx  RooSimplenSDPbPb.cxx  RooSimplenSDPbPb_split.cxx  RooSimplepTPbPb_ML.cxx
notebooks/: .gitignore  convert.sh  convert_notebook_no_output.sh  convert_python.sh  convert_remove_all_input.sh  dask_unfolding.ipynb  dask_unfolding.py  hardest-kt-all-R02-comparison.py  hardest-kt-central-R02-pass3-summary.py  hardest-kt-semi-central-R02-pass3-summary.py  hardest-rg-zg-summary.py  hardestKtSummary.noOutput.ipynb  paper-hardest-kt-all-R02-comparison.py  paper-plots-hardest-kt.py  paper-plots-hardest-kt_Rg_zg.py  status.md
notebooks/my_html_with_toc/: index.html.j2
projects/dask_config/: dask_distributed_increase_ttl.yaml
tests/analysis/: test_full_results_helpers.py  test_unfoldding_base.py
tests/base/: test_unfolding.py
toy/: .gitignore  2wbosonHIdijet.cc  CMakeLists.txt  Makefile  README.md  compile_pythia.sh  thermal_matches.cc  toymodelb.cc
toy/batch/: start.sh  submit.sh
toy/cmake/modules/: FindFastJet.cmake  FindPythia8.cmake
toy/include/: output.h
toy/src/: CMakeLists.txt  LinkDef.h  groomingToy.cc  output.cc
trains/PbPb/5441/: config.yaml
trains/PbPb/5537/: config.yaml
trains/PbPb/5740/: config.yaml
trains/PbPb/5862/: config.yaml
trains/PbPb/5863/: config.yaml
trains/PbPb/5987/: config.yaml
trains/PbPb/6359/: config.yaml
trains/PbPb/6672/: config.yaml
trains/PbPb/6673/: config.yaml
trains/PbPb/6748/: config.yaml
trains/embedPythia/5884/: config.yaml
trains/embedPythia/5885/: config.yaml
trains/embedPythia/5886/: config.yaml
trains/embedPythia/5887/: config.yaml
trains/embedPythia/5888/: config.yaml
trains/embedPythia/5889/: config.yaml
trains/embedPythia/5890/: config.yaml
trains/embedPythia/5891/: config.yaml
trains/embedPythia/5892/: config.yaml
trains/embedPythia/5893/: config.yaml
trains/embedPythia/5894/: config.yaml
trains/embedPythia/5895/: config.yaml
trains/embedPythia/5896/: config.yaml
trains/embedPythia/5897/: config.yaml
trains/embedPythia/5898/: config.yaml
trains/embedPythia/5899/: config.yaml
trains/embedPythia/5900/: config.yaml
trains/embedPythia/5901/: config.yaml
trains/embedPythia/5902/: config.yaml
trains/embedPythia/5903/: config.yaml
trains/embedPythia/5966/: config.yaml
trains/embedPythia/5967/: config.yaml
trains/embedPythia/5968/: config.yaml
trains/embedPythia/5969/: config.yaml
trains/embedPythia/5970/: config.yaml
trains/embedPythia/5971/: config.yaml
trains/embedPythia/5972/: config.yaml
trains/embedPythia/5973/: config.yaml
trains/embedPythia/5974/: config.yaml
trains/embedPythia/5975/: config.yaml
trains/embedPythia/5976/: config.yaml
trains/embedPythia/5977/: config.yaml
trains/embedPythia/5978/: config.yaml
trains/embedPythia/5979/: config.yaml
trains/embedPythia/5980/: config.yaml
trains/embedPythia/5981/: config.yaml
trains/embedPythia/5982/: config.yaml
(+337 files in other folders)
