[tool.poetry]
name = "jet_substructure"
version = "0.1.0"
description = "Jet substructure analysis code"
authors = ["Raymond Ehlers <raymond.ehlers@cern.ch>"]
license = "BSD-3-Clause"
include = [
    "jet_substructure/py.typed",
]

[tool.poetry.scripts]
embedPythia = "jet_substructure.analysis.analyze_tree:embed_pythia_entry_point"
splitTree = "jet_substructure.base.helpers:split_tree_entry_point"
mergeROOTFiles = "jet_substructure.base.helpers:merge_ROOT_files_entry_point"
downloadTrainWithConfig = "jet_substructure.base.download_train_with_config:entry_point"
skimDataset = "jet_substructure.analysis.skim_to_flat_tree:skim_entry_point"
processEmbeddingSkim = "jet_substructure.analysis.data_frame:process_embedding_skim_entry_point"
processEmbeddingSkimCpp = "jet_substructure.cpp.data_frame:embed_pythia_entry_point"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.21"
uproot3 = ">=3"
uproot = ">=4.2"
pandas = ">=1.3"
attrs = ">=21.2.0"
matplotlib = ">=3.4.2"
pachyderm = {path = "external/pachyderm", develop = true}
mammoth = {path = "external/mammoth", develop = true}
h5py = ">=3.1"
coloredlogs = ">=15.0.1"
dask = {version = ">=2021.1.0", extras = ["dataframe"]}
enlighten = ">=1.4.0"
pathos = ">=0.2.5"
seaborn = ">=0.11.1"
awkward0 = ">=0"
awkward = ">=1.7"
pyarrow = ">=4.0"
numba = ">=0.56.0"
parsl = {git = "https://github.com/Parsl/parsl.git", rev = "6d1f9160d487b3265f6e9d65ebb357837a437c30", extras = ["monitoring"]}
mplhep = ">=0.3.4"
boost-histogram = ">=1.2"
hist = {version = ">=2.5.0", extras = ["plot"]}

[tool.poetry.dev-dependencies]
flake8 = ">=3.8.3"
black = ">=22.1.0"
mypy = ">=0.931"
ipython = ">=8.0"
pytest = ">=6.2.4"
flake8-colors = ">=0.1.9"
pre-commit = ">=2.0.1"
yamllint = ">=1.20.0"
jupyter_nbextensions_configurator = ">=0.4.1"
# Not explictily enabled because it needs graphviz to be install separately via apt, brew, etc.
#pygraphviz = ">=1.5"
networkx = ">=2.4"
jupyterlab-widgets = ">=1.0.0"
jupyterlab = ">=3.0.16"

[tool.isort]
# NOTE: isort isn't installed since it pins the maximum python version, which causes problems for poetry
#       However, we leave the previous settings here as a reference if we decide to add it back later
#       (most likely if the version issue is resolved)
profile = "black"
line_length = 120
skip = ["docs/conf.py"]
skip_glob = ".*"

[tool.black]
line-length = 120
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
