[build-system]
# pdm
requires = ["pdm-backend"]
build-backend = "pdm.backend"
# hatch
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "jet_substructure"
description = "Jet substructure analysis code"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [
  { name = "Raymond Ehlers", email = "raymond.ehlers@cern.ch" },
]
# For hatch, need to remove the dependencies references here
dynamic = ["optional-dependencies", "version"]
dependencies = [
    "awkward >=1.7",
    "uproot >=4.2",
    "uproot3 >=3",
    "numpy >=1.21",
    "pyarrow >=4",
    "pandas >=2.0",
    "attrs >=21.2.0",
    "matplotlib >=3.4.2",
    "particle >=0.15.1",
    "numba >=0.56.0",
    "hist[plot] >=2.5.0",
    "seaborn >=0.11.2",
    "vector >=0.8.5",
    "parsl[monitoring] >=2023.06.12",
    "rich >=v13.4.0",
    "h5py >=3.1",
    "coloredlogs >=15.0.1",
    "dask[dataframe,distributed,diagnostics]>=2022.12.0",
    "dask-jobqueue>=0.8.1",
    "enlighten >=1.4.0",
    "pathos >=0.2.5",
    "awkward0 >=0",
    "mplhep >=0.3.4",
    "boost-histogram >=1.2",
    # My packages last:
    # - pachyderm
    # For pdm: it's in the dev dependencies since we want it to be editable, but we can
    # copy it twice, see here: https://github.com/pdm-project/pdm/discussions/1479
    "pachyderm >= 3.0",
    # For hatch: we can install it locally (but not editable) with:
    #"pachyderm @ file://{root:uri}/external/pachyderm",
    # - mammoth
    # For pdm: it's in the dev dependencies since we want it to be editable, but we can
    # copy it twice, see here: https://github.com/pdm-project/pdm/discussions/1479
    "mammoth >= 0.1",
    # For hatch: we can install it locally (but not editable) with:
    #"mammoth @ file://{root:uri}/external/mammoth",
]

# NOTE: If moving to hatch, move this to "[project.optional-dependencies]"
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.209",
    "flake8 >=3.8.3",
    "mypy >=0.931",
    "ipython >=8.0",
    "pytest >=6.2.4",
    "ipykernel >=6.15.1",
    "pytest-sugar >=0.9.5",
    "pre-commit >=2.0.1",
    "yamllint >=1.20.0",
    "jupyter_nbextensions_configurator >=0.4.1",
    # Not explictily enabled because it needs graphviz to be install separately via apt, brew, etc.
    #"pygraphviz >=1.5",
    "networkx >=2.4",
    "jupyterlab-widgets >=1.0.0",
    "jupyterlab >=3.0.16",
    # pachyderm
    # pdm requires editable dependencies to be in the dev dependencies
    "-e file:///${PROJECT_ROOT}/external/pachyderm#egg=pachyderm",
    # mammoth
    # pdm requires editable dependencies to be in the dev dependencies
    "-e file:///${PROJECT_ROOT}/external/mammoth#egg=mammoth",
]

[tool.hatch]
# NOTE: I didn't switch to a src layout yet since as of Nov 2022 it would be too painful updating scripts, etc
version.path = "jet_substructure/__init__.py"
build.include = [
    "jet_substructure/py.typed",
]

# NOTE: I didn't switch to a src layout yet since as of Nov 2022 it would be too painful updating scripts, etc
[tool.pdm.version]
source = "file"
path = "jet_substructure/__init__.py"

[tool.pdm.scripts]
embedPythia = { call = "jet_substructure.analysis.analyze_tree:embed_pythia_entry_point" }
splitTree = { call = "jet_substructure.base.helpers:split_tree_entry_point" }
mergeROOTFiles = { call = "jet_substructure.base.helpers:merge_ROOT_files_entry_point" }
downloadTrainWithConfig = { call = "jet_substructure.base.download_train_with_config:entry_point" }
skimDataset = { call = "jet_substructure.analysis.skim_to_flat_tree:skim_entry_point" }
processEmbeddingSkim = { call = "jet_substructure.analysis.data_frame:process_embedding_skim_entry_point" }
processEmbeddingSkimCpp = { call = "jet_substructure.cpp.data_frame:embed_pythia_entry_point" }

[tool.mypy]
files = "src"
python_version = "3.9"
warn_unused_configs = true
strict = true
ignore_missing_imports = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
no_implicit_reexport = false

[tool.black]
line-length = 120

[tool.ruff]
exclude = [
    '.git',
    '.env',
    '.env3',
    '.py3.7',
    '.venv',
    'env',
    '__pycache__',
    'bak',
    'build',
    'dist',
    "comparison",
    "exploration_scripts",
    "external",
]
line-length = 120
select = [
    "E", "F", "W", # flake8
    "C901",        # mccabe
    "B", "B904",   # flake8-bugbear
    "I",           # isort
    "ARG",         # flake8-unused-arguments
    "C4",          # flake8-comprehensions
    "EM",          # flake8-errmsg
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "RET",         # flake8-return
    "RUF",         # Ruff-specific
    "SIM",         # flake8-simplify
    "T20",         # flake8-print
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
ignore = [
    "E501",
    "E722",
    "RUF001",  # Unicode chars
    "PLR",
]
unfixable = [
    "T20",  # Removes print statements
    "F841", # Removes unused variables
]
target-version = 'py38'

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.isort]
known-first-party = ["jet_substructure"]

[tool.pylint]
master.py-version = "3.9"
master.ignore-paths= ["src/substructure/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "wrong-import-position",
]

[tool.pytest.ini_options]
log_cli_level = "info"
